Modify package.json, /routes/, server.js, swaggerLog.json, /utils/
