# func_schemas/validateSchemas.js
@@ -4,8 +4,8 @@ module.exports = {
 
     registerSchema: {
         body: Joi.object({
-            email: Joi.string().min(6).email().required(),
-            password: Joi.string().min(6).required(),
+            email:Joi.string().min(6).email().required(),
+            password:Joi.string().alphanum().min(6).required(),
             first_name: Joi.string().alphanum().min(3).max(30).required(),
             last_name: Joi.string().alphanum().min(3).max(30).required(),
             address: Joi.string().required(),
@@ -14,14 +14,16 @@ module.exports = {
             country: Joi.string().trim().alphanum().required(),
             date_joined: Joi.date().format('DD-MM-YYYY').utc(),
             active: Joi.boolean(),
-            user_role: Joi.string()
+            user_role: Joi.string(),
+            modified: Joi.date().format('DD-MM-YYYY').utc(),
+            is_admin: Joi.boolean()
 
         })
     },
     loginSchema: {
         body: Joi.object({
             email: Joi.string().min(6).email().required(),
-            password: Joi.string().min(6).required()
+            password: Joi.string().alphanum().min(6).required(),
         })
     },
     updateSchema: {
