# swaggerLog.json
@@ -373,7 +373,7 @@
             "description": "User is logged in.",
             "content": {
               "text/plain": {
-                "example": "Token. Message: Test is logged in, customer"
+                "example": "User is logged in."
               }
             }
           },
@@ -439,7 +439,10 @@
                   "city": "Test",
                   "country": "Test",
                   "date_joined": "2022-05-18T13:33:52.412Z",
-                  "active": true
+                  "active": true,
+                  "user_role": "customer",
+                  "modified": "2022-09-11T21:00:00.000Z",
+                  "is_admin": false
                 }
               }
             }
@@ -448,23 +451,17 @@
       },
       "put": {
         "summary": "Update account information.",
-        "description": "Update account information if logged in with Passport.",
+        "description": "Update account information - email if logged in with Passport.",
         "operationId": "put_user",
         "tags": ["User"],
         "requestBody": {
-          "description": "Update user data by sending data you want, changed in key value pairs.\nYou can send one or many updates in the same request body.",
+          "description": "Update user email by sending new email, changed in key value pairs.\nPossible send one or many updates in the same request body.",
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Registration"
+                "$ref": "#/components/schemas/User"
               },
               "examples": {
-                "name change": {
-                  "value": {
-                    "first_name": "Testiko",
-                    "last_name": "Test"
-                  }
-                },
                 "email change": {
                   "value": {
                     "email": "new_test_name@example.com"
@@ -499,7 +496,7 @@
       },
       "delete": {
         "summary": "Deletes user account",
-        "description": "This path deletes your account from the database. Make sure you want to delete because there is no any recovery proccess.",
+        "description": "This path deletes user account from the database. Make sure you want to delete because there is no any recovery proccess.",
         "operationId": "delete_user",
         "tags": ["User"],
         "responses": {
@@ -594,10 +591,10 @@
                   "$ref": "#/components/schemas/Cart"
                 },
                 "example": {
-                  "id": 3,
-                  "user_id": 3,
-                  "created": "2022-05-18",
-                  "modified": null
+                  "id": 4,
+                  "user_id": 22,
+                  "created": "2022-05-18T13:54:53.660Z",
+                  "modified": "2022-09-18T13:51:34.508Z"
                 }
               }
             }
@@ -959,6 +956,28 @@
         }
       }
     },
+    "/api/stripe/create-checkout-session": {
+      "post": {
+        "tags": ["Payment"],
+        "operationId": "post_payment",
+        "description": "Uses Stripe to create a Payment Intent. Returns created object of client payment intent data.",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Payment"
+                },
+                "example": {
+                  "url": "https://checkout.stripe.com/....."
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/orders": {
       "get": {
         "summary": "Get all orders.",
@@ -1044,17 +1063,17 @@
                   "$ref": "#/components/schemas/Order"
                 },
                 "example": {
-                  "id": 3,
+                  "id": 4,
                   "user_id": 22,
                   "status": "PENDING",
-                  "created_at": "2022-05-18T15:41:11.354Z",
-                  "modified": "2022-05-24T18:15:40.269Z",
-                  "total_price": "$712,500.00",
+                  "created_at": "2022-05-21T11:46:44.626Z",
+                  "modified": "2022-05-24T18:16:20.614Z",
+                  "total_price": "$189,990.00",
                   "products": [
                     {
-                      "order_items": "(3,1,15,\"$712,500.00\")",
-                      "product_id": 1,
-                      "quantity": 15
+                      "order_items":  "(4,4,3,\"$189,990.00\")",
+                      "product_id": 4,
+                      "quantity": 3
                     }
                   ]
                 }
@@ -1076,28 +1095,7 @@
         }
       }
     },
-    "/api/stripe/create-checkout-session": {
-      "post": {
-        "tags": ["Payment"],
-        "operationId": "post_payment",
-        "description": "Uses Stripe to create a Payment Intent. Returns created object of client payment intent data.",
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Payment"
-                },
-                "example": {
-                  "url": "https://checkout.stripe.com/....."
-                }
-              }
-            }
-          }
-        }
-      }
-    },
+
     "components": {
       "schemas": {
         "Registration": {
@@ -1172,6 +1170,15 @@
             },
             "active": {
               "type": "string"
+            },
+            "user_role": {
+              "type": "string"
+            },
+            "modified": {
+              "type": "date"
+            },
+            "is_admin": {
+              "type": "boolean"
             }
           }
         },
